Random crashes while editing mesh with subsurface modifier. #45768

Closed
opened 2015-08-12 11:23:44 +02:00 by Denis Belov · 6 comments

Operating system and graphics card
win7x64, win8.1x64

Broken: blender-2.75-d39e188-win64 (all recent builds)
Worked: blender 2.75a

Blender randomly crashes while editing mesh with subsurface modifier (for example "merge vertex"). Deleting subsurf modifier stops crashes.
However this problem hard to reproduce from scratch, this bug appears after some time you start working.

See attached file.

There is also a strange thing about this crashes, if you load this file with UI enabled, then edit mesh + merge vertex = crash,
load it without UI = everything if fine for a wile, after some time crashes reappears.

Tryed it on 2 computers win7x64 and win8x64, factory defaults, even deleted C:\Users***\AppData\Roaming\Blender Foundation\Blender\2.75 folder.
Blender 2.75a opens that file ok, no crashes.

crash_ui.blend

Operating system and graphics card win7x64, win8.1x64 Broken: blender-2.75-d39e188-win64 (all recent builds) Worked: blender 2.75a Blender randomly crashes while editing mesh with subsurface modifier (for example "merge vertex"). Deleting subsurf modifier stops crashes. However this problem hard to reproduce from scratch, this bug appears after some time you start working. See attached file. There is also a strange thing about this crashes, if you load this file with UI enabled, then edit mesh + merge vertex = crash, load it without UI = everything if fine for a wile, after some time crashes reappears. Tryed it on 2 computers win7x64 and win8x64, factory defaults, even deleted C:\Users\***\AppData\Roaming\Blender Foundation\Blender\2.75 folder. Blender 2.75a opens that file ok, no crashes. [crash_ui.blend](https://archive.blender.org/developer/F223706/crash_ui.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

Added subscribers: @Sergey, @Psy-Fi, @ideasman42, @mont29

Added subscribers: @Sergey, @Psy-Fi, @ideasman42, @mont29

Could reproduce crash when merging all, easy fix is incomming. ;)

However, could not reproduce random crash while editing mesh so far… @Sergey, @Psy-Fi and/or @ideasman42 might have ideas here, though?

Could reproduce crash when merging all, easy fix is incomming. ;) However, could not reproduce random crash while editing mesh so far… @Sergey, @Psy-Fi and/or @ideasman42 might have ideas here, though?

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2015-08-18 08:34:22 +02:00

This has been fixed d39e188 crashes, but tested 92fe4e52fd and the problems resolved.

This has been fixed d39e188 crashes, but tested 92fe4e52fd and the problems resolved.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45768
No description provided.