Fix 'hard crash' part of T45768 (when merging all vertices of a mesh, we have no more edges to draw).